<resources>
    <string name="app_name">Mobile_app_final_project</string>
    <string name="action_settings">Settings</string>
    <string name="quick_acrobatics">Acrobatics</string>
    <string name="quick_animal_handling">Animal Handling</string>
    <string name="quick_arcana">Arcana</string>
    <string name="quick_athletics">Athletics</string>
    <string name="quick_deception">Deception</string>
    <string name="quick_history">History</string>
    <string name="quick_insight">Insight</string>
    <string name="quick_intimidation">Intimidation</string>
    <string name="quick_investigation">Investigation</string>
    <string name="quick_medicine">Medicine</string>
    <string name="quick_nature">Nature</string>
    <string name="quick_perception">Perception</string>
    <string name="quick_performance">Performance</string>
    <string name="quick_persuasion">Persuasion</string>
    <string name="quick_religion">Religion</string>
    <string name="quick_sleight_of_hand">Sleight of Hand</string>
    <string name="quick_stealth">Stealth</string>
    <string name="quick_survival">Survival</string>
    <string-array name="dice_types">
        <item>D4</item>
        <item>D6</item>
        <item>D8</item>
        <item>D10</item>
        <item>D12</item>
        <item>D20</item>
    </string-array>
    <string-array name="roll_count">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="dice_roll_4">D4</string>
    <string name="dice_roll_6">D6</string>
    <string name="dice_roll_8">D8</string>
    <string name="dice_roll_10">D10</string>
    <string name="dice_roll_12">D12</string>
    <string name="dice_roll_20">D20</string>


    <string name="pc_name">Name: </string>
    <string name="pc_exp">Exp: </string>
    <string name="pc_alignment">Alignment</string>
    <string name="cc_title">Character Creation</string>
    <string name="pc_scores">Ability Scores: </string>
    <string name="prof_text">Skill Proficiencies (Choose %1$d):</string>
    <string name="confirm_character">Confirm Character</string>
    <string name="character_creation">Character Creation</string>
    <string name="roll">Roll</string>
    <string name="success_question">Success?</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="home">Home</string>
    <string name="combat_menu">Combat</string>

    <string-array name="alignments">
        <item>Alignment</item>
        <item>Lawful Good</item>
        <item>Neutral Good</item>
        <item>Chaotic Good</item>
        <item>Lawful Neutral</item>
        <item>True Neutral</item>
        <item>Chaotic Neutral</item>
        <item>Lawful Evil</item>
        <item>Neutral Evil</item>
        <item>Chaotic Evil</item>
    </string-array>

    <string-array name="races">
        <item>Race</item>
        <item>Aarakocra</item>
        <item>Aasimar</item>
        <item>Bugbear</item>
        <item>Dragonborn</item>
        <item>Dwarf</item>
        <item>Elf</item>
        <item>Feral Tiefling</item>
        <item>Firblog</item>
        <item>Genasi</item>
        <item>Gnome</item>
        <item>Goblin</item>
        <item>Goliath</item>
        <item>Half-Elf</item>
        <item>Halfing</item>
        <item>Half-Orc</item>
        <item>Hobgoblin</item>
        <item>Human</item>
        <item>Kenku</item>
        <item>Kobold</item>
        <item>Lizardfolk</item>
        <item>Orc</item>
        <item>Tabaxi</item>
        <item>Tiefling</item>
        <item>Tortle</item>
        <item>Triton</item>
        <item>Yuan-ti</item>
    </string-array>

    <string-array name="spellLvl">
        <item>Level 0 Spell</item>
        <item>Level 1 Spell</item>
        <item>Level 2 Spell</item>
        <item>Level 3 Spell</item>
        <item>Level 4 Spell</item>
        <item>Level 5 Spell</item>
        <item>Level 6 Spell</item>
        <item>Level 7 Spell</item>
        <item>Level 8 Spell</item>
        <item>Level 9 Spell</item>
    </string-array>

    <string-array name="combatStats">
        <item>Speed</item>
        <item>Armor Class</item>
        <item>HP</item>
        <item>Saves</item>
        <item>Initiative</item>
    </string-array>


    <string name="speed">Speed</string>
    <string name="armorClass">Armor Class</string>
    <string name="hp">HP</string>
    <string name="saves">Saves</string>
    <string name="initiative">Initiative</string>



</resources>
