<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.wit.mobileapp.dndMobileFinalProject.DiceControl">

    <include layout="@layout/to_include"
        android:id="@+id/drawer_stuff"/>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_marginTop="?actionBarSize"
        tools:showIn="@layout/activity_dice_control"
        android:id="@+id/content_main">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/chosen_dice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/dice_types"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/roll_count"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/roll_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:entries="@array/roll_count"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <!--ImageView
            android:id="@+id/add_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/dice_rolled"
            app:layout_constraintStart_toEndOf="@+id/dice_rolled"
            app:layout_constraintTop_toTopOf="@+id/dice_rolled"
            app:srcCompat="@drawable/ic_add_black_24dp" /-->

        <TextView
            android:id="@+id/roll_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <TextView
            android:id="@+id/roll_result_with_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/roll_result"
            app:layout_constraintStart_toStartOf="@+id/roll_result"
            app:layout_constraintTop_toBottomOf="@+id/roll_result" />

        <Button
            android:id="@+id/re_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="128dp"
            android:text="@string/roll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roll_result" />

        <Button
            android:id="@+id/success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/success_question"
            app:layout_constraintEnd_toStartOf="@+id/re_roll"

            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/re_roll" />

        <Button
            android:id="@+id/failure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/failure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/re_roll"
            app:layout_constraintTop_toTopOf="@+id/re_roll" />


        <RadioButton
            android:id="@+id/advantage_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Advantage"
            app:layout_constraintEnd_toEndOf="@+id/disadvantage_radio"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/disadvantage_radio"
            app:layout_constraintTop_toTopOf="@+id/roll_result" />

        <RadioButton
            android:id="@+id/disadvantage_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="Disadvantage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/advantage_radio" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/extra_dice_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/re_roll">


        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>
